--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -2,3 +2,7 @@ $pink-000: #f77ef1;
 $pink-100: #f967f1;
 $pink-200: #e94ee1;
 $pink-300: #dd2cd4;
+$orange-000: #ffa343;
+$orange-100: #ffae42;
+$orange-200: #ffa500;
+$orange-300: #ff8c00 
